[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.28", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.110"
serde = { version = "1.0.194", features = ["derive"] }